--- a/css/site.css
+++ b/css/site.css
@@ -11,3 +11,31 @@ body {
   margin-bottom: 60px;
   background-color: #d5d5d5;
 }
+
+/* Header */
+
+.navbar {
+    background-color: #FFF;
+    box-shadow: 0px 0px 20px #AAA;
+    margin-bottom: 15px;
+    border-bottom: 0px !important;
+}
+
+/**
+* Content Container
+*/
+
+.content-container {
+    background-color: #FFF;
+    border-radius: 5px;
+    box-shadow: 0px 5px 5px #AAA;
+    margin-bottom: 15px;
+}
+
+.content-container .header {
+    font-weight: bold;
+    background-color: #999;
+    padding: 10px;
+    border-radius: 5px 5px 0px 0px;
+    color: #FFF;
+}
