--- a/css/site.css
+++ b/css/site.css
@@ -2,6 +2,16 @@ html {
   font-size: 14px;
 }
 
+@media (min-width: 768px) {
+  html {
+    font-size: 16px;
+  }
+}
+
+.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
+  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
+}
+
 html {
   position: relative;
   min-height: 100%;
@@ -21,6 +31,82 @@ body {
     border-bottom: 0px !important;
 }
 
+/* Footer */
+
+footer {
+    background-color: #FFF;
+    box-shadow: 0px 0px 20px #AAA;
+    border-top: 0px !important;
+}
+
+/**
+* Colors
+*/
+
+.fg-red {
+    color: #FF7B7B;
+}
+
+.bg-red {
+    background-color: #FF7B7B;
+}
+
+.fg-orange {
+    color: #FF9D38;
+}
+
+.bg-orange {
+    background-color: #FF9D38;
+}
+
+.fg-green {
+    color: #4CD633;
+}
+
+.bg-green {
+    background-color: #4CD633;
+}
+
+.fg-blue {
+    color: #57B7FB;
+}
+
+.bg-blue {
+    background-color: #57B7FB;
+}
+
+/**
+*   Stat Card
+*/
+
+.stat-card {
+    background-color: #FFF;
+    border-radius: 5px;
+    box-shadow: 0px 5px 5px #AAA;
+}
+
+.stat-card-icon {
+    min-width: 25%;
+    border-radius: 5px 0px 0px 5px;
+    padding: 10px;
+    color: #FFF;
+    text-align: center;
+    height: 75px;
+    line-height: 75px;
+    float: left;
+}
+
+.stat-card-data-container {
+    display: flex;
+    flex-direction: column;
+}
+
+.stat-card-data-text {
+    height: 37.5px;
+    line-height: 37.5px;
+    padding-left: 10px;
+}
+
 /**
 * Content Container
 */
@@ -38,4 +124,52 @@ body {
     padding: 10px;
     border-radius: 5px 5px 0px 0px;
     color: #FFF;
+}
+
+.content-container .content {
+    padding: 10px;
+}
+
+/**
+* Data Tables
+*/
+
+table {
+    width: 100%;
+}
+
+/*tr:first-child {
+    background-color: #E6E6E6;
+    color: #666;
+}*/
+
+th {
+    padding: 10px;
+}
+
+th:first-child {
+    border-radius: 5px 0px 0px 0px;
+}
+
+th:last-child {
+    border-radius: 0px 5px 0px 0px;
+}
+
+td {
+    border-width: 0px 0px 1px 0px;
+    border-style: solid;
+    border-color: #E0E0E0;
+    padding: 10px;
+}
+
+/**
+    Other Edits
+*/
+
+ol, ul {
+    list-style: none;
+}
+
+a {
+    text-decoration: none;
 }
