--- a/css/site.css
+++ b/css/site.css
@@ -26,7 +26,7 @@ body {
 
 .navbar {
     background-color: #FFF;
-    /*box-shadow: 0px 0px 20px #AAA;*/
+    box-shadow: 0px 0px 20px #000;
     /*margin-bottom: 15px;*/
     border-bottom: 0px !important;
 }
@@ -112,12 +112,14 @@ footer {
 */
 
 .main-content {
-    padding-top: 15px;
-    padding-bottom:550px;
     background-image:url('../images/site/bg.jpg');
-    background-position: top;
+    padding-top: 5rem; 
+    background-position: 50% 0;
     background-repeat: no-repeat;
-    background-size: cover;
+}
+
+.main-content div:first-child {
+    max-width: 110rem;
 }
 
 .content-container {
@@ -126,8 +128,6 @@ footer {
     margin-bottom: 15px;
     /*box-shadow: 0px 5px 5px #AAA;*/
 }
-
-
 
 .content-container .header {
     font-weight: bold;
@@ -191,4 +191,15 @@ a {
 
 .box-shadow {
     box-shadow: 0px 5px 5px #AAA;
+}
+
+/**
+    Images
+*/
+
+img {
+    max-width: 100%; 
+    border: 1px solid #666;
+    box-shadow: 0px 5px 5px #AAA;
+    border-radius: 5px;
 }
