--- a/css/site.css
+++ b/css/site.css
@@ -39,7 +39,7 @@ body {
 
 footer {
     background-color: #FFF;
-    box-shadow: 0px 0px 20px #AAA;
+    box-shadow: 0px 0px 20px #666;
     border-top: 0px !important;
 }
 
@@ -130,7 +130,7 @@ footer {
     background-color: #FFF;
     border-radius: 5px;
     margin-bottom: 15px;
-    /*box-shadow: 0px 5px 5px #AAA;*/
+    box-shadow: 0px 5px 5px #666;
 }
 
 .content-container .header {
@@ -143,6 +143,15 @@ footer {
 
 .content-container .content {
     padding: 10px;
+}
+
+.content-container-blank {
+    margin-bottom: 15px;
+}
+
+.content-container-blank .content {
+    padding: 10px;
+    color: #FFF;
 }
 
 /**
@@ -190,14 +199,6 @@ a {
 }
 
 /**
-    Other Attributes
-*/
-
-.box-shadow {
-    box-shadow: 0px 5px 5px #AAA;
-}
-
-/**
     Images
 */
 
@@ -208,7 +209,7 @@ img {
     border-radius: var(--bs-border-radius);
     max-width: 100%; 
     height: auto;
-    box-shadow: 0px 5px 5px #AAA;
+    box-shadow: 0px 5px 5px #666;
 }
 
 footer div:first-child {
