--- a/css/site.css
+++ b/css/site.css
@@ -29,7 +29,7 @@ body {
 
 .navbar {
     background-color: #FFF;
-    box-shadow: 0px 0px 20px #000;
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.60);
     /*margin-bottom: 15px;*/
     border-bottom: 0px !important;
  
@@ -39,7 +39,7 @@ body {
 
 footer {
     background-color: #FFF;
-    box-shadow: 0px 0px 20px #666;
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.60);
     border-top: 0px !important;
 }
 
@@ -86,7 +86,7 @@ footer {
 .stat-card {
     background-color: #FFF;
     border-radius: 5px;
-    box-shadow: 0px 5px 5px #AAA;
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.60);
 }
 
 .stat-card-icon {
@@ -130,7 +130,7 @@ footer {
     background-color: #FFF;
     border-radius: 5px;
     margin-bottom: 15px;
-    box-shadow: 0px 5px 5px #666;
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.60);
 }
 
 .content-container .header {
@@ -209,7 +209,7 @@ img {
     border-radius: var(--bs-border-radius);
     max-width: 100%; 
     height: auto;
-    box-shadow: 0px 5px 5px #666;
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.60);
 }
 
 footer div:first-child {
@@ -223,4 +223,19 @@ footer div:first-child {
 .bi-icon-attr {
     font-size: 2.5rem;
     color: var(--bs-white);
+}
+
+/**
+    Media Queries
+*/
+
+@media screen and (max-width: 767px) {
+  .about {
+    margin-top: 1rem;
+    background-color: var(--bs-white);
+    border-radius: var(--bs-border-radius);
+    padding: .25rem;
+    color: var(--bs-body-color);
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.60);
+  }
 }
