--- a/css/site.css
+++ b/css/site.css
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-  margin-bottom: 60px;
+  margin-bottom: 1rem;
   background-color: #d5d5d5;
   /*font-family:ui-sans-serif,system-ui,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji';*/
   -webkit-font-smoothing: antialiased; /* For WebKit browsers */
@@ -38,8 +38,8 @@ body {
 /* Footer */
 
 footer {
-    background-color: #FFF;
-    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.60);
+    /*background-color: #FFF;*/
+    box-shadow: 0rem -5rem 5rem 0rem rgb(0 0 0 / 30%);
     border-top: 0px !important;
 }
 
